--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Votre message
+{% block title %}Contacter la salle de la Thérésière.
 {% endblock %}
 
 {% block body %}
