--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}ACCUEIL
+{% block title %}Location de Salle de Réception pour Mariage et Événements | La Salle de la Thérésière
 {% endblock %}
 
 {% block body %}
