--- a/templates/layout/footer.html.twig
+++ b/templates/layout/footer.html.twig
@@ -4,10 +4,8 @@
 			<a href="https://www.google.com/maps/place/SCI+La+Th%C3%A9r%C3%A9si%C3%A8re/@46.5139581,-1.6269756,17z/data=!4m6!3m5!1s0x48044174a8ca067f:0xd1f4614a21b87145!8m2!3d46.5139581!4d-1.6269756!16s%2Fg%2F11c6k7x35q?entry=ttu" target="_blank" rel="noopener noreferrer" title="Ouvrir la carte Google Maps dans un nouvel onglet" class="map-link-container">
 				<div
 					class="map-placeholder">
-					<!-- Texte pour le placeholder -->
 					<p>Cliquez ici pour voir la carte de localisation</p>
 					<p class="small">(Ouvrir Google Maps)</p>
-					<!-- Vous pouvez ajouter une petite icône ici si vous le souhaitez -->
 				</div>
 			</a>
 		</div>
@@ -31,10 +29,10 @@
 		<nav class="footer-nav-buttons">
 			<ul>
 				<li><a href=" {{ path('app_legal_page_show',{'slug':'mentions-legales'}) }} ">Mentions légales</a></li>
-				<li><a href=" {{path('app_legal_page_show',{'slug':'politique-de-confidentialite'})}} ">Politique de Confidentialité</a></li>
-				<li><a href=" {{path('app_legal_page_show',{'slug':'conditions-generales-de-location'})}} ">Conditions Générales de Location</a></li>
-				<li><a href=" {{path('app_legal_page_show',{'slug':'politique-de-cookies'})}}  mermaid?">Politique de Cookies</a></li>
-				<li><a href="#" id="open_preferences_center" class="cookie-preferences-link">Modifier mes préférences cookies</a></li>
+				<li><a href=" {{path('app_legal_page_show',{'slug':'politique-de-confidentialite'})}} ">Confidentialité</a></li>
+				<li><a href=" {{path('app_legal_page_show',{'slug':'conditions-generales-de-location'})}} ">CGL</a></li>
+				<li><a href=" {{path('app_legal_page_show',{'slug':'politique-de-cookies'})}} ">Cookies</a></li>
+				<li><a href="#" id="open_preferences_center" class="cookie-preferences-link">Gérer mes cookies</a></li>
 			</ul>
 		</nav>
 	</div>
