--- a/templates/legal_page/new.html.twig
+++ b/templates/legal_page/new.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('legal_page/_form.html.twig') }}
 
-    <a href="{{ path('app_legal_page_index') }}">Retour à la liste</a>
-	<a href="{{ path('app_panel_admin')}}">Retour au tableau administrateur</a>
+    <a class="btn-principal" href="{{ path('app_legal_page_index') }}">Retour à la liste</a>
+	<a class="btn-principal" href="{{ path('app_panel_admin')}}">Retour au tableau administrateur</a>
 
 {% endblock %}
