--- a/templates/option/show.html.twig
+++ b/templates/option/show.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Options
+{% block title %}{{option.nom}}
 {% endblock %}
 
 {% block body %}
-	<h1>Options</h1>
+	<h1>{{option.nom}}</h1>
 
 	<div class="option-details-container">
 		<ul class="option-details-list">
