Amélioration de la gestion des réservations : ajout de la vérification des dates indisponibles et mise à jour des notifications pour les administrateurs. Ajout d'un lien vers la politique de confidentialité dans le formulaire de contact.

--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -12,7 +12,8 @@
 			</p>
 		{% endif %}
 		{{ form_start(contactForm) }}
-		{{ form_widget(contactForm) }}
+		{{ form_row(contactForm.objet) }}
+		{{ form_row(contactForm.message) }}
 
 		{% if contactForm.consentementConfidentialite is defined %}
 
@@ -24,7 +25,7 @@
 			</label>
 			{{ form_errors(contactForm.consentementConfidentialite)}}
 		{% endif %}
-
+		{{ form_rest(contactForm) }}
 		<button class="btn-principal">{{ button_label|default('Envoyer') }}</button>
 		{{ form_end(contactForm) }}
 	</form>
